[package]
name = "repo_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
chrono = "0.4.41"
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", features = ["json", "gzip"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
